# id8

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  IMPLEMENTATION-PLAN-V2.MD  Makefile  PRD.MD  README.md  Refactor.md  TECH-PLAN.MD  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_add_deleted_at_and_stack_json.py  0003_add_project_title.py  894558d99604_initial_schema.py
backend/app/: config.py  db.py  errors.py  main.py  middleware.py  worker.py
backend/app/codegen/: __init__.py  template_project.py
backend/app/dependencies/: __init__.py  idempotency.py
backend/app/deploy/: secret_filter.py  supabase.py  vercel.py
backend/app/design/: auth_cache.py  auth_resolver.py  base.py  internal_spec.py  provider_factory.py  stitch_mcp.py
backend/app/github/: __init__.py  auth.py  client.py
backend/app/llm/: __init__.py  client.py  router.py
backend/app/models/: __init__.py  approval_event.py  audit_event.py  deployment_record.py  enums.py  project.py  project_artifact.py  project_run.py  provider_credential.py  retry_job.py  user.py
backend/app/routes/: deploy.py  (+5 more)
backend/tests/: conftest.py  test_acceptance_testing.py  test_code_generation.py  test_deployment_pipeline.py  test_design_engine.py  test_github_auth.py  test_github_integration.py  test_llm.py  test_models_roundtrip.py  test_orchestrator.py  test_prd_generation.py  test_routes.py  test_schema_mappings.py  test_security_gate.py  test_stack_validation.py  test_tech_plan_generation.py
(+116 files in other folders)
